unpackaged/main/default/objects/EmailMessage/fields/CreatedByRole__c.field-meta.xml
<CustomField>
    <fullName>CreatedByRole__c</fullName>
    <description>Role of the Email Message Creator.</description>
    <formula>CreatedBy.UserRole.Name</formula>
    <inlineHelpText>Role of the Email Message Creator.</inlineHelpText>
    <label>CreatedByRole</label>
    <type>Text</type>
</CustomField>