unpackaged/main/default/objects/EmailMessage/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <formula>NOT(Is_Public__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>