unpackaged/main/default/objects/EmailMessage/fields/Is_Public__c.field-meta.xml
<CustomField>
    <fullName>Is_Public__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Public</label>
    <type>Checkbox</type>
</CustomField>