unpackaged/main/default/objects/EmailMessage/fields/Zendesk_Author_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_Author_ID__c</fullName>
    <label>Zendesk Author ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>