unpackaged/main/default/objects/EmailMessage/fields/Zendesk_ID__c.field-meta.xml
<CustomField>
    <fullName>Zendesk_ID__c</fullName>
    <label>Zendesk ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>